--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ body {
 }
 
 .container {
-  display: flex;
+  text-align: center;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
 
 .box {
@@ -27,7 +28,7 @@ body {
 .left {
   width: 50%;
   padding-top: 1rem;
-  padding-left: 20rem;
+  margin-left: 10rem;
 }
 
 .right {
@@ -41,14 +42,15 @@ body {
   display: flex;
 }
 .col {
-  height: 100px;
-  width: 100px;
+  height: 5rem;
+  width: 5rem;
   margin-bottom: 1.5rem;
   margin-left: 1.5rem;
-  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+    text-align: center;
+
   font-size: 3rem;
   font-weight: 500;
   color: #49243e;
@@ -81,3 +83,28 @@ button {
 .draw h1 {
   margin-left: 1rem;
 }
+
+
+
+@media (max-width:644px){
+  .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .left{
+    margin-left: .5rem;
+  }
+  .col{
+    height: 4rem;
+    max-width: 10rem;
+  }
+}
+ 
